feat: #4 - db 정보 추가 및 ignore 수정

--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@ local.properties
 .loadpath
 .recommenders
 #application.yml
-application*.yml
+#application*.yml
 # External tool builders
 .externalToolBuilders/
 # Ignore everything under Resources folder, not elsewhere
