--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,6 +15,12 @@ spring:
       hibernate:
         show_sql: true
         format_sql: true
+  data:
+    web:
+      pageable:
+        size-parameter: pageSize
+        default-page-size: 15
+
 
 logging:
   level:
