feat: #14 Swagger 추가
- 의존성 추가
- 설정 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,6 +21,9 @@ spring:
         size-parameter: pageSize
         default-page-size: 15
 
+  mvc:
+    path-match:
+      matching-strategy: ant_path_matcher
 
 logging:
   level:
