--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
 
+    //swagger
+    implementation 'io.springfox:springfox-boot-starter:3.0.0'
+
     //mysql
     runtimeOnly 'com.mysql:mysql-connector-j'
 
